# Just-Python

./: .gitignore  README.md  game-1.py  guess-words-game.py  pyproject.toml  test.py  test_maybe.py
monads/: maybe.py
src/just_python/: __init__.py
src/monads/: either.py  maybe.py
worksheets/: arith_geo.py  csv_use_either.py  test_maybe.py
