[project]
name = "just-python"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "fResult", email = "styxmaz@gmail.com" }
]
dependencies = [
    "PyMonad>=2.4.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/just_python"]
